2020-02-07 CHANGELOG, reorg
2019-08-31 init app, model, noteboooks