@@ -1,9 +1,9 @@
 from datetime import datetime
 from flask_sqlalchemy import SQLAlchemy
 
-# from app import db
 
 db = SQLAlchemy()
+
 
 class OHLCV(db.Model):
 
